fix: visit page horizontal scrollbar

--- a/visit.css
+++ b/visit.css
@@ -4,7 +4,7 @@ header {
     z-index: 100;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     background: rgba(0, 0, 0, 0);
     padding: 23px 0;
     transition: background-color 1s ease;
@@ -88,7 +88,7 @@ header.transparent {
 footer {
     position: relative;
     background-color: var(--deep-knowledge-blue);
-    width: 100vw;
+    width: 100%;
     height: 80vh;
     margin-top: -140px;
     z-index: 2;
@@ -227,7 +227,7 @@ footer {
 
 .component-1 {
     position: relative;
-    width: 100vw;
+    width: 100%;
 }
 
 .c1-bg-img {
@@ -291,7 +291,7 @@ p {
 .component-2 {
     position: relative;
     background: var(--gradient-1);
-    width: 100vw;
+    width: 100%;
     height: 200vh;
     /* z-index: 1; */
     margin-top: -200px;
@@ -356,6 +356,7 @@ p {
     position: absolute;
     top: 20%;
     left: 0;
+    width: 100%;
 }
 
 .c2-contaner {
@@ -521,14 +522,14 @@ p {
 }
 
 .c3-bg-video {
-    width: 100vw;
+    width: 100%;
 }
 
 /* Component 4 */
 .component-4 {
     position: relative;
     margin-top: -600px;
-    width: 100vw;
+    width: 100%;
     height: 140vh;
     background: var(--gradient-2);
     clip-path: polygon(
@@ -619,7 +620,7 @@ p {
 .component-5 {
     position: relative;
     margin-top: -300px;
-    width: 100vw;
+    width: 100%;
     height: 150vh;
     background: var(--gradient-3);
     color: var(--eco-white);
